Arreglo de color de cliente

--- a/Ej1_Tema3_AH_/src/app/cliente/cliente.page.html
+++ b/Ej1_Tema3_AH_/src/app/cliente/cliente.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Cliente</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -32,4 +32,5 @@
       Guardar
     </ion-button>
   </form>
+
 </ion-content>
