Arreglo de color de datocliente

--- a/Ej1_Tema3_AH_/src/app/datoscliente/datoscliente.page.html
+++ b/Ej1_Tema3_AH_/src/app/datoscliente/datoscliente.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Clientes guardados</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -17,4 +17,5 @@
   <div *ngIf="!clientes.length">
     No hay clientes guardados.
   </div>
+
 </ion-content>
